# StakkenRefactor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Documentation  Makefile  cmake_install.cmake  readme.md  vcpkg.json
Networking Backup/: Client.cpp
include/: HSV.h  SFMLHelper.h  location.h  slurp.h  timestamp.h  types.h
release/: Client  Server  Stakken
release/demos/: DEMO.rep  DEMO2.rep  last_played.rep  replay.rep
release/identities/: Fuu.id  NO SERVICE.id  Yaranaika.id
release/profiles/: Default.pro
release/resources/shaders/: APerf.frag  Checkers.frag  Clouds.frag  Mountain.frag  Ocean.frag  Retro.frag  Stars.frag
src/: Application.cpp  Application.h  Lobby.cpp  Lobby.h  LobbyContext.h  LocklessQueue.h  Player.h  Team.h  main.cpp
src/Assets/: AssetDirectory.h  Assets.cpp  Assets.h  BGShader.cpp  BGShader.h  Font.cpp  Font.h  Sound.cpp  Sound.h  Sounds.cpp  Sounds.h  Texture.cpp  Texture.h
src/Challenges/: Challenges.cpp  Challenges.h
src/Data/: ColorTable.h  Identity.cpp  Identity.h
src/Game/: Board.cpp  Board.h  ClientLobby.cpp  ClientLobby.h  Demo.cpp  Demo.h  DemoFrame.h  DemoPlayer.cpp  DemoPlayer.h  DemoRecorder.cpp  DemoRecorder.h  EventBuffer.h  Game.cpp  Game.h  IGameRules.h  IMultiplayerContext.h  LocalLobby.cpp  LocalLobby.h  Piece.cpp  Piece.h  PieceDefinitions.h  RotationTable.h  TetrisEvent.h  Tile.h
src/Game/Randomizers/: Randomizer.h  RingHistory.h  SimonRandomizer.cpp  SimonRandomizer.h  XoroshiroRandomizer.cpp  XoroshiroRandomizer.h
src/Gamemodes/: Gamemodes.cpp  Gamemodes.h
src/Input/: IController.h  Input.cpp  Input.h  InputProfile.cpp  InputProfile.h  Keyboard.cpp  Keyboard.h
src/Networking/: Client.cpp  Client.h  Message.h  Peer.h  Profile.h  ReadBuffer.h  Room.h  SendBuffer.h  Server.cpp  Server.h  StakkenMSG.h  net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  tsqueue.h
src/Rendering/: RenderGame.cpp  RenderGame.h  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h
src/States/: ChallengePlayState.cpp  ChallengePlayState.h  ChallengeSelectState.cpp  ChallengeSelectState.h  LobbyState.cpp  LobbyState.h  LoginState.cpp  LoginState.h  MenuState.cpp  MenuState.h  RoomSelectState.cpp  RoomSelectState.h  SettingsState.cpp  SettingsState.h  _State.cpp
src/Text/: Font.cpp
src/UI/: Node.cpp  Node.h  NodeTypes.cpp  NodeTypes.h  UI.cpp  UI.h
src/UI/Widgets/: Button.h  Checkbox.cpp  Checkbox.h  ColorRotationEditor.cpp  ColorRotationEditor.h  Container.h  DraggableIcon.h  GameViewer.h  HiddenInput.cpp  HiddenInput.h  Image.h  ImageBacked.h  Input.cpp  Input.h  Label.h  NumericInput.cpp  NumericInput.h  PieceEditor.cpp  PieceEditor.h  Slider.h  TextButton.h  Widget.cpp  Widget.h
